--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,6 +13,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v4
+        args: --verbose
         with:
           version: v1.55.2
   test:
